<resources>
    <string name="app_name">Wolne Lektury</string>
    <string name="nav_wolne_lektury">Wolne Lektury</string>
    <string name="nav_catalog">Biblioteka</string>
    <string name="nav_news">Aktualności</string>
    <string name="nav_my_collection">Moja kolekcja</string>
    <string name="nav_about">O aplikacji</string>
    <string name="nav_reading">Teraz czytam</string>
    <string name="nav_completed">Przeczytane</string>
    <string name="see_all">Zobacz wszystkie</string>
    <string name="open">Otwórz</string>
    <string name="close">Zamknij</string>
    <string name="no_results">Brak wyników</string>
    <string name="loading_results_failed">Wystąpił błąd podczas ładowania danych</string>
    <string name="no_search_results">Brak rezultatów wyszukiwania</string>
    <string name="book_epoch">Epoka</string>
    <string name="book_kind">Rodzaj</string>
    <string name="book_genre">Gatunek</string>
    <string name="library_newest">Nowości</string>
    <string name="library_recommended">Polecane</string>
    <string name="library_my_collection">Moja kolekcja</string>
    <string name="library_audiobooks">Audiobooki</string>
    <string name="support_us">Wesprzyj nas</string>
    <string name="pages">Stron</string>
    <string name="back">Powrót</string>
    <string name="refresh">Odśwież</string>
    <string name="forward">Do przodu</string>
    <string name="page_error">Nie udało się załadować zawartości.\nOdśwież stronę.</string>
    <string name="download_ebook">Czytaj</string>
    <string name="download_ebook_read">Czytaj dalej</string>
    <string name="download_ebook_loading">Pobieranie</string>
    <string name="download_audiobook">Słuchaj</string>
    <string name="download_audiobook_read">Słuchaj dalej</string>
    <string name="download_audiobook_loading">Pobieranie</string>
    <string name="menu_filter">Filtruj</string>
    <string name="menu_search">Wyszukaj</string>
    <string name="only_lecture">Lektury szkolne</string>
    <string name="filter_epochs">Epoki</string>
    <string name="filter_genres">Gatunki</string>
    <string name="filter_kinds">Rodzaje</string>
    <string name="filters">Filtrowanie</string>
    <string name="menu_accept">Potwierdź</string>
    <string name="lectures">Lektury</string>
    <string name="book_loading_error">Nie udało się załadować danych. Proszę spróbować ponownie.</string>
    <string name="book_download_error">Nie udało się pobrać pliku ebook\'a. Proszę spróbować ponownie.</string>
    <string name="share">Udostępnij</string>
    <string name="load_epochs_failed">Nie udało się załadować epok</string>
    <string name="load_genres_failed">Nie udało się załadować gatunków</string>
    <string name="load_kinds_failed">Nie udało się załadować rodzajów</string>
    <string name="load_player_failed">Nie udało się załadować odtwarzacza</string>
    <string name="about_text"><![CDATA[Nie potrzebujesz już dostępu do komputera, żeby skorzystać z zasobów biblioteki
        WolneLektury.pl! Aplikacja mobilna daje Ci dostęp do kilku tysięcy bezpłatnych utworów oraz kilkuset
        audiobooków, zawsze tam, gdzie masz ochotę na przeczytanie książki!<br /><br />Wolne Lektury są najpopularniejszą w
        Polsce biblioteką internetową. Od 2007 roku publikujemy utwory należące do klasyki literatury oraz literaturę
        współczesną i udostępniamy je za darmo wszystkim zainteresowanym – znajdą tutaj dla siebie coś zarówno
        dzieci, młodzież, jak i dorośli. Dzięki aplikacji czytelnicy uzyskują bezpośredni i wygodny dostęp na
        urządzeniach mobilnych do zasobów biblioteki.<br /><br />Wszystkie utwory zamieszczone w bibliotece Wolne Lektury można
        zgodnie z prawem bezpłatnie przeglądać, słuchać, pobierać na swój komputer, a także udostępniać innym i
        cytować. Większość utworów nie jest objęta majątkowym prawem autorskim i znajduje się w
        <a href="https://domenapubliczna.org/co-to-jest-domena-publiczna/">domenie publicznej</a>, co oznacza że można
        je swobodnie publikować i rozpowszechniać. Pozostałe zostały udostępnione na jednej z wolnych licencji -
        <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons</a> Uznanie Autorstwa -
        Na Tych Samych Warunkach 3.0.PL lub <a href="http://artlibre.org/licence/lal/pl/">Licencja Wolnej Sztuki 1.3</a>.<br /><br />
        Zapoznaj się z <a href="https://wolnelektury.pl/info/regulamin/">Regulaminem biblioteki</a> oraz
        <a href="https://nowoczesnapolska.org.pl/prywatnosc/">Polityką prywatności</a>.<br /><br />
        Znajdziesz nas również pod adresem <a href="www.wolnelektury.pl">www.wolnelektury.pl</a>.<br /><br />
        Kontakt: <a href="mailto:wolnelektury@nowoczesnapolska.org.pl">wolnelektury@nowoczesnapolska.org.pl</a>]]>
    </string>
    <string name="about_text_fundation">Bibliotekę prowadzi fundacja Nowoczesna Polska.</string>
    <string name="about_text_mkdn">Dofinansowano ze środków Ministra Kultury i Dziedzictwa Narodowego.</string>

    <string name="support_us_header">Podaruj nam swój 1%! Fundacja Nowoczesna Polska posiada status
Organizacji Pożytku Publicznego dzięki czemu na rozwój projektu Wolne
Lektury można przekazać 1% swojego podatku. W tym celu należy wypełnić
odpowiednią rubrykę w rocznym zeznaniu podatkowym (PIT-36, PIT-37 lub
PIT-28). W zeznaniu należy podać nazwę: Fundacja Nowoczesna Polska
oraz numer z Krajowego Rejestru Sądowego (KRS) 0000070056.</string>
    <string name="support_us_text"><![CDATA[Przekaż darowiznę na Wolne Lektury! Każda wpłacona kwota zostanie
przeznaczona na rozwój zasobów naszej biblioteki. Więcej informacji
znajdziesz na <a href="https://wolnelektury.pl/info/wesprzyj-nas/">naszej stronie</a>.<br/><br/>
         Pomóż uwolnić konkretną książkę, wspierając zbiórkę na <a href="https://wolnelektury.pl/wesprzyj/lektura/">tej stronie</a>.]]></string>
    <string name="login_request_token_failed">Pierwsza faza logowania nie powiodła się. Spróbuj ponownie.</string>
    <string name="login_access_token_failed">Druga faza logowania nie powiodła się. Spróbuj ponownie.</string>
    <string name="menu_login">Zaloguj się</string>
    <string name="main_view_progress">Trwa ładowanie danych…</string>
    <string name="login_auth_callback_malformed">Przepraszamy, coś poszło nie tak. Otrzymaliśmy błędną odpowiedź z serwera. Prosimy o kontakt z administracją.</string>
    <string name="logged_as">Zalogowany jako</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="logout_successful">Wylogowano</string>
    <string name="unauthorized">Wygasły dane logowania. Proszę zalogować się ponownie.</string>
    <string name="nav_premium">Prapremiera</string>
    <string name="nav_favourites">Ulubione</string>
    <string name="nav_audiobooks">Audiobooki</string>
    <string name="audiobook">Audiobook</string>
    <string name="has_audiobook">Audiobook</string>
    <string name="nav_downloaded">Pobrane</string>
    <string name="become_a_friend">Zostań przyjacielem</string>
    <string name="reading_progress">Przeczytano %d%%</string>
    <string name="listening_progress">Odsłuchano %d%%</string>
    <string name="book_list_newest_title">Nowości</string>
    <string name="book_list_recommended_title">Polecane</string>
    <string name="player_timer_null">0:00</string>
    <string name="news_when">Kiedy:</string>
    <string name="news_where">Gdzie:</string>
    <string name="retry">Spróbuj ponownie</string>
    <string name="load_again">Załaduj ponownie</string>
    <string name="prapremiere_info">Powyższe dzieło dostępne jest w ramach programu Wczesnego Dostępu dla
        użytkowników, którzy zdecydowali się wesprzeć Wolne Lektury. Chcesz czytać już teraz? Wesprzyj nas! Zostań naszym przyjacielem!</string>
    <string name="no_prapremiere_message">Obecnie przygotowujemy dla Ciebie nową Prapremierę. Jeśli chcesz mieć do niej
        dostęp kliknij tutaj i zostań naszym Przyjacielem</string>
    <string name="no_prapremiere_message_logged">Obecnie przygotowujemy dla Ciebie nową Prapremierę.</string>
    <string name="player_chapter_number">Rozdział %02d</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pauza</string>
    <string name="label_play">Odtwórz</string>
    <string name="label_previous">Poprzedni</string>
    <string name="label_next">Następny</string>
    <string name="settings_notifications">Zezwalaj na powiadomienia</string>
    <string name="subscribtion_state">Stan subskrybcji</string>
    <string name="delete_files">Usuń wszystkie pobrane pliki</string>
    <string name="settings">Ustawienia</string>
    <string name="active">Aktywny</string>
    <string name="inactive">Nieaktywny</string>
    <string name="delete">Usuń</string>
    <string name="premium_purchase_failed">Płatność nie powiodła się. Prosimy o kontakt z administracją.</string>
    <string name="premium_purchase_succeeded">Od tej pory jesteś naszym subskrybentem! Dziękujemy!</string>
    <string name="login_first">Aby zostać naszym przyjacielem musisz się najpierw zalogować</string>
    <string name="default_notification_channel_id">wolne_lektury_default_channel_id</string>
    <string name="default_notification_topic">wolnelektury</string>
    <string name="fetching_premium_failed">Nie udało się pobrać informacji o prapremierze. Spróbuj jeszcze raz!</string>
    <string name="book_deleted_message">Pozycja została usunięta z pamięci twojego urządzenia</string>
    <string name="all_files_removed">Wszystkie pliki zostały usunięte z Twojego urządzenia</string>
    <string name="removing_all_files">Trwa usuwanie plików...</string>
    <string name="no_thanks">Nie dziękuje</string>
    <string name="no_prapremiere_title">Prapremiera</string>
    <string name="login">Zaloguj</string>
    <string name="downloaded_empty_list">Brak pobranych plików</string>
    <string name="audiobooks_empty_list">Brak audiobooków</string>
    <string name="newest_empty_list">Brak najnowszych pozycji</string>
    <string name="recommended_empty_list">Brak rekomendowanych pozycji</string>
    <string name="reading_empty_list">Nie czytasz jeszcze żadnej pozycji</string>
    <string name="faviourites_empty_list">Nie masz jeszcze ulubionych pozycji</string>
    <string name="completed_empty_list">Nie przeczytałeś jeszcze żadnej pozycji</string>
    <string name="subscription_lost">Subskrypcja wygasła</string>
    <string name="install_chrome">Twój system nie posiada przeglądarki. Zalecamy instalację Google Chrom i ponowienie tej próby.</string>
    <string name="library_now_reading">Teraz czytam</string>
    <string name="login_title">Załóż konto / Zaloguj się w Wolnych Lekturach, aby:</string>
    <string name="login_benefits">dodawać książki i audiobooki do ulubionych,</string>
    <string name="login_benefits_2">wrócić do czytania rozpoczętej już książki,</string>
    <string name="login_benefits_3">zostać naszym przyjacielem i pomóc nam rozwijać Wolne Lektury.</string>
    <string name="read_now_library_empty">Zacznij czytać już teraz!</string>
    <string name="all_files_failed_to_remove">Nie udało się usunąc danych. Wystąpił błąd: %s</string>
</resources>
