<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/llProfileContainer"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                tools:ignore="SpUsage">

    <Button
        android:id="@+id/btnLogin"
        style="@style/RoundedButton.WhiteBorder"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_login"/>

    <LinearLayout
        android:id="@+id/llLoggedInContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLogged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_as"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="10dp"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/btnLogout"
            style="@style/RoundedButton.WhiteBorder"
            android:layout_marginTop="10dp"
            android:text="@string/menu_logout"/>
    </LinearLayout>

</RelativeLayout>